--- a/fed-e-task-03-03/nuxtcode/pm2.config.json
+++ b/fed-e-task-03-03/nuxtcode/pm2.config.json
@@ -1,7 +1,7 @@
 {
     "apps":[
         {
-            "name":"RealWord",
+            "name":"wphsRealWord",
             "script":"npm",
             "args":"start"
         }
