--- a/fed-e-task-03-03/nuxtcode/.github/workflows/main.yml
+++ b/fed-e-task-03-03/nuxtcode/.github/workflows/main.yml
@@ -53,8 +53,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /root/wph/nuxt
-          wget https://github.com/lipengzhou/realworld-nuxtjs/releases/latest/download/release.tgz -O release.tgz
+          cd /home
+          wget https://github.com/wangpenghe666/nuxtcode/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
           pm2 reload pm2.config.json
